# Organic_Agentic_AutoDev

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adr/: ADR-0001-compounding-knowledge-wiki.md
docs/: architecture.md  autoresearch.md  decision-log.md  discovery-log.md  distributed-ecosystem.md  evaluation.md  governance.md  knowledge.md  lessons-learned.md  llm-cognition.md  mouseion-substrate.md  persistent-mouseion.md  research-synthesis.md  roadmap.md  runbook.md  security.md  slime-mold-connections.md  stem-cell-agents.md  web-dashboard.md  wiki.md  workflows.md
examples/: autoresearch_demo.py  basic_stem_cell.py  cognitive_demo.py  colony_formation.py  distributed_demo.py  knowledge_wiki_demo.py  medical_ecosystem.py  organ_specialization.py  persistence_demo.py
organic_agentic_autodev/autoresearch/: __init__.py  cognition.py  evaluator.py  integration.py  proposer.py  runner.py
organic_agentic_autodev/cognition/: __init__.py  anthropic_provider.py  bridge.py  cognitive_cell.py  contracts.py  genome_prompt.py  mock_provider.py  openai_provider.py  provider.py  run_cycle.py
organic_agentic_autodev/core/: environment.py  genome.py  niche.py  stem_cell.py
organic_agentic_autodev/dashboard/: __init__.py  __main__.py  app.py  sim_runner.py
organic_agentic_autodev/distributed/: __init__.py  async_environment.py  bridge.py  coordinator.py  runner.py
organic_agentic_autodev/domain/: __init__.py
organic_agentic_autodev/evolution/: fitness.py  (+2 more)
src/: __init__.py
tests/: test_autoresearch.py  test_autoresearch_cognition.py  test_cognition.py  test_cognition_bridge.py  test_dashboard.py  test_distributed.py  test_exmorbus_domain.py  test_genome.py  test_knowledge_wiki.py  test_knowledge_wiki_query_lint.py  test_mouseion.py  test_observability.py  test_organism_hierarchy.py  test_persistent_mouseion.py  test_slime_mold.py  test_stem_cell.py  test_wiki_answer_reuse.py  test_wiki_health_sli.py  test_wiki_retrieval_strategies.py
(+89 files in other folders)
