[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organic-agentic-autodev"
version = "0.1.0"
description = "A bio-mimicking, self-developing, self-improving agentic architecture modeled on stem cell biology and slime mold growth patterns"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["agents", "AI", "biomimicry", "stem-cells", "slime-mold", "autonomous", "self-improving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "networkx>=3.2",
    "scipy>=1.12",
    "rich>=13.7",
    "anyio>=4.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
llm = [
    "openai>=1.20",
    "anthropic>=0.25",
]
vector = [
    # Optional upgrade for semantic search; the default HashingEmbedder needs none.
    "sentence-transformers>=2.6",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
distributed = [
    # Optional bridge for true multi-process / multi-machine deployment.
    "redis>=5.0",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
oaa-learning-cycle = "organic_agentic_autodev.cognition.run_cycle:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["organic_agentic_autodev*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
